// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HowToCite for Article renders the component correctly 1`] = `
<DocumentFragment>
  <div
    class="howtocite"
  >
    <h3>
      How to cite this page
    </h3>
    <p>
      Anthony Byledbal, “
      <span>
        My Awesome Article Title
      </span>
      “,
      <em>
         New Zealand Tunnellers Website
      </em>
      , 2023 (2009), Accessed: 4 May 2023. 
      <span>
        URL: www.nztunnellers.com/history/my-awesome-article-title.
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`HowToCite for Profile renders the component correctly 1`] = `
<DocumentFragment>
  <div
    class="howtocite"
  >
    <h3>
      How to cite this page
    </h3>
    <p>
      Anthony Byledbal, “John Doe (1888-1975)“,
      <em>
         New Zealand Tunnellers Website
      </em>
      , 2023 (2009), Accessed: 4 May 2023. 
      <span>
        URL: www.nztunnellers.com/tunnellers/26.
      </span>
    </p>
  </div>
</DocumentFragment>
`;
